--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,173 @@
 :root {
+  --color-white: #fff;
+  --color-white-100: rgba(255, 255, 255, 0.1);
+  --color-white-200: rgba(255, 255, 255, 0.2);
+  --color-white-400: rgba(255, 255, 255, 0.4);
+  --color-white-800: rgba(255, 255, 255, 0.8);
+  --color-white-900: rgba(255, 255, 255, 0.9);
+  --color-black: #1e1e1e;
+  --color-black-100: rgba(0, 0, 0, 0.1);
+  --color-black-50: rgba(211, 197, 197, 0.39);
+  --color-black-200: rgba(0, 0, 0, 0.2);
+  --color-black-500: rgba(0, 0, 0, 0.5);
+  --color-black-600: rgba(0, 0, 0, 0.6);
+  --color-blue-800: #007ff7;
+  --app-color-white: rgb(252, 255, 251);
+  --color-red: rgba(255, 2, 2, 0.788);
+  --color-green: #11dd4e;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  border: 0;
+  list-style: none;
+}
+
+button,
+input {
+  background-color: transparent;
+  border: 0;
+  outline: 0;
+  -webkit-tap-highlight-color: transparent;
+}
+
+body {
+  height: 100vh;
+  user-select: none;
+  font-family: "Lexend", sans-serif;
+  background: url("../public/macOS-Big-Sur-wallpapers-1-scaled.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+
+li > ul {
+  display: none;
+  position: absolute;
+  align-items: center;
+  flex-direction: column;
+  left: 0;
+  top: 100%;
+  margin-top: 1px;
+  font-weight: 600;
+  padding: 4px;
+  min-width: 200px;
+  background: var(--color-white-400);
+  backdrop-filter: blur(11px);
+  border-radius: 5px;
+  box-shadow: 0 2px 7px rgba(0, 0, 0, 0.363);
+}
+li:hover > ul {
+  display: flex;
+}
+
+li > ul > li {
+  width: 100%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  padding-bottom: 5px;
+  margin-bottom: 5px !important;
+}
+
+li > ul > li:last-child {
+  border-bottom: 0;
+  padding-bottom: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+li > ul > li > button {
+  color: var(--color-white);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  text-align: left;
+  font-family: "Lexend", sans-serif;
+  font-weight: 100;
+  padding: 4px 8px;
+  border-radius: 5px;
+  transition: 80ms;
+  font-size: 14px;
+  cursor: url(/public/assets/images/cursor/Link.cur), pointer;
+}
+
+li > ul > li > button:hover {
+  color: var(--color-white);
+  background: var(--color-blue-800);
+}
+
+li > ul > li > button:active {
+  background-color: #0063f7;
+}
+
+li > .menu__container {
+  display: none;
+  position: absolute;
+  width: 380px;
+  border-radius: 20px;
+  top: 100%;
+  right: 50%;
+  height: 24rem;
+  transform: translateX(50%);
+  background-color: rgba(224, 222, 222, 0.349);
+  backdrop-filter: blur(11px);
+  border: 1px solid rgba(70, 50, 77, 0.308);
+  box-shadow: 0 7px 15px rgba(26, 26, 26, 0.24);
+  overflow: hidden;
+  padding: 15px;
+}
+
+li:hover .menu__container {
+  display: flex;
+}
+
+li > .menu__container > .grid__controling {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-areas:
+    "Toggles Toggles DoNotDisturb DoNotDisturb"
+    "Toggles Toggles KeyboardBrightness Battery"
+    "Display Display Display Display"
+    "Audio Audio Audio Audio"
+    "Music Music Music Music";
+  grid-gap: 1em 1em;
+}
+li > .menu__container > .grid__controling .control_center--grid {
+  display: grid;
+  box-shadow: 0 5px 15px rgba(44, 44, 44, 0.37);
+  border: 1px solid rgba(255, 255, 255, 0.178);
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+
+::-webkit-scrollbar {
+  background-color: #fff;
+  width: 16px;
+}
+
+/* background of the scrollbar except button or resizer */
+::-webkit-scrollbar-track {
+  background-color: #fff;
+}
+
+/* scrollbar itself */
+::-webkit-scrollbar-thumb {
+  background-color: #babac0;
+  border-radius: 16px;
+  border: 4px solid #fff;
+}
+
+/* set button(top and bottom of the scrollbar) */
+::-webkit-scrollbar-button {
+  display: none;
+}
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +273,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
